--- a/style/Le_cabinet.css
+++ b/style/Le_cabinet.css
@@ -2,9 +2,9 @@
   font-family: "sofiapro-bold";
   src: url(../fonts/Sofia\ Pro\ Bold\ Az.otf);
  }
-*{
-    font-family: "sofiapro-bold";
-}
+ *{
+  font-family: "sofiapro-bold";
+ }
 body{
     margin: 0em;
 }
@@ -41,8 +41,8 @@ body{
 .logo-navbar img:nth-of-type(1){
     width: 17vw;
     border: 1px solid  white;
+    margin: 0.1em 0 0 0em;
     margin-top: 8.5vh;
-    object-fit: contain;
 }
 .nav-container{
     display: flex;
@@ -56,13 +56,14 @@ body{
     /* line-height: 55px; */
     padding: 0;
     margin-top: 0.1em;
-    /* height: 4.8vh; */
+    height: 4.8vh;
     cursor: pointer;
 }
 .btn-1>a{
   text-decoration: none;
   color: black;
   font-size: 1.9em;
+
 }
 .btn-1:hover {
     color: #d4b090;
@@ -186,7 +187,7 @@ body{
     letter-spacing: 2px;
     position :relative;
     padding: 0;
-    /* line-height: 55px; */
+    line-height: 55px;
     height: 55px;
     cursor: pointer;
     margin-top: 0.2em;
@@ -278,22 +279,22 @@ body{
     width: 100%;
   }
 .burger{
-    display: block;
     z-index: 5;
   }
   
   .bar1, .bar3{
+      width: 6vw;
+      height: 3px;
+      background-color: black;
+      margin-top: 0.6vh;
+  }
+  .bar2{
+    background-color: #CFB192;
     width: 6vw;
     height: 3px;
-    background-color: black;
-    margin-top: 0.6vh;
-}
-.bar2{
-  background-color: #CFB192;
-  width: 6vw;
-  height: 3px;
-  margin-top: 0.5vh;
-}
+    margin-top: 0.5vh;
+  }
+
   .show{
     top: 0;
   }
@@ -448,13 +449,11 @@ body{
     align-items: center;
     justify-content: center;
     display: flex;
-    width: 95vw;
-    height: 15em;
-    margin-top: 20%;
+    width: 100vw;
 }
 .title ul{
     color: white;
-    /* margin-top: 2em; */
+    margin-top: 4em;
     font-size: 4vh;
     padding: 0;
     text-align-last: center;
@@ -463,58 +462,161 @@ body{
 .space-horizontal{
     border: 1px solid  #eeeded;
     width: 25vw;
-    margin-top: 1%;
 }
+    /*------PARAGRAPH------*/
 .first-paragraph{
-  margin-top: 3%;
+  margin-top: 2em;
 }
 .first-paragraph p{
-  margin: 0;
-  margin-top: 1.5em;
+  margin: 0.3em;
 }
 .first-paragraph li{
     list-style-type: none;
     color: white;
-    width: 64vw;
+    width: 68vw;
     font-size: 0.9em;
     text-align: center;
     padding: 0;
 }
-
-li {}
 .first-paragraph ul{
     padding: 0;
 }
+.second-paragraph p{
+  margin: 0.3em;
+}
+.second-paragraph li{
+  color: white;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+.second-paragraph ul{
+  padding: 0;
+}
+.third-paragraph p{
+  margin: 0.3em;
+}
+.third-paragraph li{
+  color: white;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+.third-paragraph ul{
+  padding: 0;
+}
+.fourth-paragraph p{
+  margin: 0.3em;
+}
+.fourth-paragraph li{
+  color: white;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+.fourth-paragraph ul{
+  padding: 0;
+}
+.fifth-paragraph p{
+  margin: 0.3em;
+}
+.fifth-paragraph li{
+  color: white;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+.fifth-paragraph ul{
+  padding: 0;
+}
+.sixth-paragraph{
+  width: 100vw;
+  height: 36vh;
+}
+.top-p{
+  width: 100vw;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.top-p ul{
+  font-size: 1.7em; 
+}
+.top-p li{
+   color: #D5B08E;  
+}
+
+.mid-p{
+  width: 100vw;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.mid-p ul{
+  font-size: 1.7em; 
+}
+.mid-p li{
+   color: #D5B08E;  
+}
+.bottom-p{
+  width: 100vw;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bottom-p ul{
+  font-size: 1.7em; 
+}
+.bottom-p li{
+   color: #D5B08E;  
+}
+/*------END OF PARAGRAPH------*/
 .A-picture{
     width: 100vw;
-    height: 60vh;
+    height: 54vh;
     display: flex;
     justify-content: center;
+    z-index: 2;
 }
 .A-picture  img:nth-of-type(1) {
-    width: 100vw;
+    width: 100%;
     margin-top: 1em;
-    height: 59.5vh;
-    object-fit: contain;
+    height: 58vh;
+    object-position: right;
+    object-fit: cover;
 }
 
 .bottombar{
-    color: white; 
-    height: 10vh;
+    color: white;
+    height: 11vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    justify-self: flex-end;
+    z-index: 2;
+    align-items: center;
+    background-color: black;
 }
 .bottombar li{
     list-style-type: none;
     margin-top: 1em;
-    font-size: 0.8em;
+    font-size: 100%;
+    width: 49vw;
+    text-align: center;
 }
+
 .bottombar ul{  
     padding: 0;
 }
-.bottombar-main{}   
+.bottombar-main{
+    background-color: black;
+    display: flex;
+}   
+.bottombar p{
+  margin: 0;
+}
 .rs-logo{
     display: flex;
     justify-content: end;
@@ -530,6 +632,7 @@ li {}
  .test{
   display: flex;
   align-items: center;
+  justify-content: end;
  }
  /*ghost class for a better site lmao*/
  .vide{
